# mojique

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-plz.yml  rust.yml
examples/: file.rs  single.rs  stdin.rs
src/: config.rs  error.rs  ffi.rs  handle.rs  lib.rs  pool.rs
tests/: buffer.rs  fd.rs  file.rs  raw.rs  read.rs
tests/common/: mod.rs
tests/data/: LICENSE.zst  symlink
