[package]
name = "mojique"
version = "0.1.0"
description = "A safe Rust wrapper and pool implementation around libmagic"
license = "MIT"
repository = "https://github.com/LawnGnome/mojique"
edition = "2024"
rust-version = "1.88"

[dependencies]
magic-sys = { version = "0.3.0", default-features = false }
static_assertions = "1.1.0"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
insta = "1.43.1"
itertools = "0.14.0"
rayon = "1.10.0"

[features]
# It's unfortunate that we have to replicate magic-sys's dependency tree here,
# but we have to in order to have flags be enabled or disabled correctly with
# `cfg` directives.
default = ["v5-38"]
v5-04 = ["magic-sys/v5-04"]
v5-05 = ["magic-sys/v5-05", "v5-04"]
v5-10 = ["magic-sys/v5-10", "v5-05"]
v5-13 = ["magic-sys/v5-13", "v5-10"]
v5-20 = ["magic-sys/v5-20", "v5-13"]
v5-21 = ["magic-sys/v5-21", "v5-20"]
v5-22 = ["magic-sys/v5-22", "v5-21"]
v5-23 = ["magic-sys/v5-23", "v5-22"]
v5-25 = ["magic-sys/v5-25", "v5-23"]
v5-27 = ["magic-sys/v5-27", "v5-25"]
v5-32 = ["magic-sys/v5-32", "v5-27"]
v5-35 = ["magic-sys/v5-35", "v5-32"]
v5-38 = ["magic-sys/v5-38", "v5-35"]
v5-40 = ["magic-sys/v5-40", "v5-38"]
